# tspp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.MD
cmake/: tspp-time-seriesConfig.cmake.in
examples/: CMakeLists.txt  bencher.hpp  parquet_tests.cpp  parquet_tests.hpp  parquet_utils.cpp  parquet_utils.hpp  tspp_examples.cpp  tspp_examples.hpp  utilities.hpp
include/tspp/: time_series.hpp
include/tspp/common/: chrono_extensions.hpp  compare_extensions.hpp  iterator_extensions.hpp  time_series_allocator.hpp  time_series_errors.hpp  tspp_enums.hpp
tests/: CMakeLists.txt  basic_ts_funcs.cpp  chrono_extens.cpp  indexed_ts_funcs.cpp  main.cpp  point_tests.cpp  print_utils.hpp  test_utils.hpp  ts_joins.cpp
